# pas.plugins.oidc

./: .coveragerc  .flake8  .gitignore  .meta.toml  .pre-commit-config.yaml  CHANGELOG.md  CHANGES.md  CHANGES.rst  CONTRIBUTORS.md  CONTRIBUTORS.rst  DEVELOP.md  DEVELOP.rst  LICENSE.rst  MANIFEST.in  Makefile  README.md  README.rst  base.cfg  buildout.cfg  dev.Dockerfile  instance.yaml  mx.ini  pyproject.toml  requirements-docs.txt  setup.cfg  setup.py  test_plone43.cfg  test_plone50.cfg  test_plone51.cfg  test_plone52.cfg  test_plone60.cfg  tox.ini
.github/workflows/: bandit.yml  ci.yml  meta.yml  tests.yml
docs/: conf.py  index.md  index.rst  pyproject.toml  robots.txt
news/: +gha-ci.internal  +gha-modernize.internal  +keycloak.internal  +plone6.1.feature  +python3.12.feature  +python3.13.feature  +python3.8.breaking  +python3.9.breaking  +restapi.internal  +update.documentation  32.feature  33.feature  34.internal  35.internal  36.internal  38.feature  41.feature  42.documentation  45.feature  48.feature  49.feature  51.documentation  53.feature  55.feature  60.feature  65.feature  67.feature  71.internal  73.feature  74.feature  78.feature  83.feature  88.feature  90.feature  98.breaking
src/pas/plugins/oidc/: __init__.py  configure.zcml  interfaces.py  jwt_verification.py  plugins.py  session.py  setuphandlers.py  testing.py  useridentities.py  utils.py
src/pas/plugins/oidc/browser/: configure.zcml  login_redirect.pt  refresh-token.pt  test_jwt.py  view.py
src/pas/plugins/oidc/controlpanel/: classic.py  configure.zcml  deserializer.py  oidc.py  serializer.py
src/pas/plugins/oidc/locales/: README.rst  pas.plugins.oidc.pot  update.py  update.sh
src/pas/plugins/oidc/locales/de/LC_MESSAGES/: pas.plugins.oidc.po
src/pas/plugins/oidc/locales/en/LC_MESSAGES/: pas.plugins.oidc.po
src/pas/plugins/oidc/locales/es/LC_MESSAGES/: pas.plugins.oidc.po
src/pas/plugins/oidc/locales/fr/LC_MESSAGES/: pas.plugins.oidc.po
src/pas/plugins/oidc/profiles/default/: browserlayer.xml  controlpanel.xml  metadata.xml
src/pas/plugins/oidc/profiles/default/registry/: main.xml
src/pas/plugins/oidc/profiles/uninstall/: browserlayer.xml
src/pas/plugins/oidc/services/: configure.zcml
src/pas/plugins/oidc/services/login/: configure.zcml  get.py
src/pas/plugins/oidc/services/oidc/: configure.zcml  oidc.py
src/pas/plugins/oidc/tests/: test_functional.py  test_plugin.py  test_robot.py  test_setup.py
src/pas/plugins/oidc/tests/robot/: test_example.robot
src/pas/plugins/oidc/upgrades/: configure.zcml
src/pas/plugins/oidc/www/: oidcPluginForm.zpt
tests/: conftest.py  docker-compose.yml
tests/controlpanel/: conftest.py  test_controlpanel_api.py
tests/functional/: conftest.py  test_controlpanel_classic.py  test_functional.py
tests/keycloak/: Dockerfile
tests/keycloak/import/: plone-realm.json  plone-test-realm.json
tests/plugin/: test_plugin.py
tests/services/: conftest.py  test_services_login_get.py  test_services_login_with_allowed_groups.py  test_services_oidc_get.py  test_services_oidc_post.py  test_servides_login_get_multiple_plugins.py
tests/setup/: test_setup_install.py  test_setup_uninstall.py
tests/utils/: test_utils_flow.py  test_utils_str.py  test_utils_url.py
